fix layout problem with sections container in tag view

--- a/app/assets/stylesheets/tags.scss
+++ b/app/assets/stylesheets/tags.scss
@@ -13,10 +13,10 @@
 }
 
 #relatedSections {
-  height: 20vh;
 }
 
 #relatedSectionsBody {
+  max-height: 20vh;
   overflow-y: scroll;
 }
 
